[package]
name = "meshacl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
multimap = "0.8.3"
thiserror = "1.0.37"
tracing = "0.1.37"
libp2p-core = { version = "0.38.0", features = ["serde"] }
prost = "0.11.3"
base64 = "0.20.0"

[build-dependencies]
prost-build = "0.11.4"
